force-app/main/default/objects/RetailOpportunity__c/fields/reason_for_hold__c.field-meta.xml
<CustomField>
    <fullName>reason_for_hold__c</fullName>
    <label>保留理由</label>
    <type>TextArea</type>
</CustomField>