force-app/main/default/objects/RetailOpportunity__c/fields/RetailStock_fixed_sales__c.field-meta.xml
<CustomField>
    <fullName>RetailStock_fixed_sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売確定在庫</label>
    <referenceTo>RetailStock__c</referenceTo>
    <relationshipLabel>リテール商談 (販売確定車両)</relationshipLabel>
    <relationshipName>RetailOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>