force-app/main/default/objects/RetailOpportunity__c/fields/RetailStock_under_opportunity__c.field-meta.xml
<CustomField>
    <fullName>RetailStock_under_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売提案在庫</label>
    <referenceTo>RetailStock__c</referenceTo>
    <relationshipLabel>リテール商談 (販売候補車両)</relationshipLabel>
    <relationshipName>RetailOpportunity_under_opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>