force-app/main/default/objects/RetailOpportunity__c/fields/reuse_flg__c.field-meta.xml
<CustomField>
    <fullName>reuse_flg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リユース経由</label>
    <type>Checkbox</type>
</CustomField>