force-app/main/default/objects/RetailOpportunity__c/fields/reuse_history__c.field-meta.xml
<CustomField>
    <fullName>reuse_history__c</fullName>
    <label>リユース_経緯内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>