force-app/main/default/objects/RetailOpportunity__c/fields/run_dist_unit__c.field-meta.xml
<CustomField>
    <fullName>run_dist_unit__c</fullName>
    <label>売却希望_走行距離単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>km</fullName>
                <default>true</default>
                <label>km</label>
            </value>
            <value>
                <fullName>mile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>