force-app/main/default/objects/RetailOpportunity__c/fields/sales_reason_other__c.field-meta.xml
<CustomField>
    <fullName>sales_reason_other__c</fullName>
    <label>売却検討理由(その他)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>