force-app/main/default/objects/RetailOpportunity__c/fields/source_for_marketing__c.field-meta.xml
<CustomField>
    <fullName>source_for_marketing__c</fullName>
    <description>マーケ分析のために使用</description>
    <label>経由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>カーセンサー経由　直来店</fullName>
            </value>
            <value>
                <fullName>カーセンサー経由　電話商談</fullName>
            </value>
            <value>
                <fullName>グーネット経由　直来店</fullName>
            </value>
            <value>
                <fullName>グーネット経由　電話商談</fullName>
            </value>
            <value>
                <fullName>カーセンサーを見て</fullName>
            </value>
            <value>
                <fullName>グーネットを見て</fullName>
            </value>
            <value>
                <fullName>展示車を見て</fullName>
            </value>
            <value>
                <fullName>前を通ったので</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>