force-app/main/default/objects/RetailOpportunity__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>売却希望_状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故車</fullName>
            </value>
            <value>
                <fullName>故障車</fullName>
            </value>
            <value>
                <fullName>中古車</fullName>
            </value>
            <value>
                <fullName>水害車</fullName>
            </value>
            <value>
                <fullName>火災車</fullName>
            </value>
            <value>
                <fullName>雹害車</fullName>
            </value>
            <value>
                <fullName>盗難車</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>