force-app/main/default/objects/RetailOpportunity__c/fields/transfer_reason_other__c.field-meta.xml
<CustomField>
    <fullName>transfer_reason_other__c</fullName>
    <label>乗換検討理由(その他)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>