force-app/main/default/objects/RetailOpportunity__c/fields/URL_for_add_images__c.field-meta.xml
<CustomField>
    <fullName>URL_for_add_images__c</fullName>
    <label>追加画像URL</label>
    <type>Url</type>
</CustomField>