force-app/main/default/objects/RetailOpportunity__c/fields/visit_date__c.field-meta.xml
<CustomField>
    <fullName>visit_date__c</fullName>
    <label>受付日</label>
    <type>Date</type>
</CustomField>