force-app/main/default/objects/RetailOpportunity__c/fields/visit_reason__c.field-meta.xml
<CustomField>
    <fullName>visit_reason__c</fullName>
    <label>来店のきっかけ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>テレビCM</fullName>
            </value>
            <value>
                <fullName>ラジオCM</fullName>
            </value>
            <value>
                <fullName>新聞・雑誌</fullName>
            </value>
            <value>
                <fullName>ソコカラのWEBサイト</fullName>
            </value>
            <value>
                <fullName>カーセンサーを見て</fullName>
            </value>
            <value>
                <fullName>グーネットを見て</fullName>
            </value>
            <value>
                <fullName>看板を見て</fullName>
            </value>
            <value>
                <fullName>イベント</fullName>
            </value>
            <value>
                <fullName>SNSで在庫紹介動画を見て</fullName>
            </value>
            <value>
                <fullName>ネットで動画広告を見て</fullName>
            </value>
            <value>
                <fullName>Youtubeの公式チャンネルを見て</fullName>
            </value>
            <value>
                <fullName>紹介</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>Facebook（フェイスブック）</fullName>
                <isActive>false</isActive>
                <label>Facebook（フェイスブック）</label>
            </value>
            <value>
                <fullName>Tiktok（ティックトック）</fullName>
                <isActive>false</isActive>
                <label>Tiktok（ティックトック）</label>
            </value>
            <value>
                <fullName>X（旧：ツイッター）</fullName>
                <isActive>false</isActive>
                <label>X（旧：ツイッター）</label>
            </value>
            <value>
                <fullName>Youtube（ユーチューブ）</fullName>
                <isActive>false</isActive>
                <label>Youtube（ユーチューブ）</label>
            </value>
            <value>
                <fullName>instagram（インスタグラム）</fullName>
                <isActive>false</isActive>
                <label>instagram（インスタグラム）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>