force-app/main/default/objects/RetailOpportunity__c/fields/visit_reason_other__c.field-meta.xml
<CustomField>
    <fullName>visit_reason_other__c</fullName>
    <label>来店のきっかけ(その他)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>