force-app/main/default/objects/RetailOpportunity__c/validationRules/Validation_ToComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_ToComplete</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL( phase_for_purchase__c , &quot;完了&quot;),
ISPICKVAL(PRIORVALUE(phase_for_purchase__c ), &quot;不成約&quot;)
),
AND(
ISPICKVAL( phase_for_sell__c , &quot;完了&quot;),
ISPICKVAL(PRIORVALUE(phase_for_sell__c ), &quot;不成約&quot;)
)
)</errorConditionFormula>
    <errorMessage>不成約から完了にはできません。
変更する場合は一度成約にしてください。</errorMessage>
</ValidationRule>