force-app/main/default/objects/RetailOpportunity__c/listViews/sococara_select_queue_RetailOpportunity.listView-meta.xml
<ListView>
    <fullName>sococara_select_queue_RetailOpportunity</fullName>
    <columns>NAME</columns>
    <columns>opportunity_type__c</columns>
    <columns>visit_date__c</columns>
    <columns>customer__c</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Mst_Models__c</columns>
    <columns>desired_car_model_year__c</columns>
    <columns>desired_car_model__c</columns>
    <filterScope>Queue</filterScope>
    <label>ソコカラセレクト未対応キュー</label>
    <queue>sococara_select_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>