force-app/main/default/objects/RetailOpportunity__c/listViews/Store_visit_survey.listView-meta.xml
<ListView>
    <fullName>Store_visit_survey</fullName>
    <columns>NAME</columns>
    <columns>opportunity_type__c</columns>
    <columns>visit_date__c</columns>
    <columns>customer__c</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Mst_Models__c</columns>
    <columns>desired_car_model_year__c</columns>
    <columns>desired_car_model__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inflow_source__c</field>
        <operation>equals</operation>
        <value>直来店</value>
    </filters>
    <label>来店アンケート流入</label>
</ListView>